--- a/Css/forecast.css
+++ b/Css/forecast.css
@@ -3,14 +3,14 @@
   padding: 30px;
   background: linear-gradient(to bottom, #5a8dee, #79b7ff);
   min-height: 100vh;
-  color: #fff;
+  color: white;
   font-family: Arial, sans-serif;
 }
 
 .current-weather {
-    display: flex;                /* ✅ horizontal */
-    flex-direction: row;          /* default, but clear */
-    align-items: center;          /* vertical alignment */
+    display: flex;            /*  ✅ horizontal*/
+    flex-direction: row;        /* default, but clear */
+    align-items: center;         /*vertical alignment */
     justify-content: space-between;
 
     background: linear-gradient(to bottom, #10c6f4, #0aa1d6);
@@ -27,7 +27,12 @@
     flex-direction: column;
     gap: 6px;
 }
-
+.city{
+  color: black;
+}
+.status{
+  color: black;
+}
 /* CENTER */
 .current-center img {
     width: 110px;
@@ -39,17 +44,19 @@
     flex-direction: column;
     gap: 6px;
     text-align: right;
+    color: black;
 }
 
 .temp {
     font-size: 28px;
     font-weight: bold;
     margin-top: 10px;
+    color: white;
 }
 
 
 /* ===== Forecast ===== */
-.forecast {
+ .forecast {
   display: flex;
   justify-content: space-between;
   margin-top: 80px;
@@ -89,4 +96,59 @@
 
 .weather-container.storm {
   background: linear-gradient(to bottom, #232526, #414345);
+} 
+
+/* Left */
+.current-left p,
+.current-right p {
+    margin: 6px 0;
+}
+
+.current-left h1 {
+    font-size: 28px;
+}
+
+.current-left h2 {
+    font-size: 22px;
+}
+
+/* Center */
+.current-center img {
+    width: 120px;
+}
+
+/* Right */
+.current-right {
+    text-align: right;
+}
+
+.current-right .temp {
+    font-size: 32px;
+    margin-top: 10px;
+}
+
+/* ===== Forecast (Horizontal Cards) ===== */
+.forecast {
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+}
+
+/* Forecast Day Card */
+.forecast-day {
+    flex: 1;
+    background: #97c6f1;
+    border-radius: 18px;
+    padding: 28px;
+    text-align: center;
+}
+
+.forecast-day img {
+    width: 45px;
+    margin: 10px 0;
+}
+
+.forecast-day p {
+    margin: 5px 0;
+    font-size: 14px;
 }
